added house crests for each individual house on the modal and changed the modal colors

--- a/index.html
+++ b/index.html
@@ -114,9 +114,16 @@
   <!-- modal part -->
   <section id="modal">
     <div class="modal-content" data-theme=''>
+      <div class="house-crest"></div>
+
       <div class='close-btn'>X</div>
-      <h1 class='student-name'></h1>
-      <h3 class='student-house'></h3>
+      <img data-field='img' src="./harryp/potter_h.png">
+      <div class="modalRightSide">
+        <h1 class='student-name'></h1>
+        <h3 class='student-house'></h3>
+        <h3 class='student-gender'></h3>
+
+      </div>
     </div>
   </section>
 
