created sort button that works

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         <option value="house" data-sort-direction="asc">House
         </option>
       </select>
-
+      <button class="button sortBtn"  data-field='sortbtn'>Sort</button>
+    </div>
   </section>
+
 
 
   <!-- <div class="templateWrapper">
