added first,middle,last name inside the modal

--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
       <div class='close-btn'>X</div>
       <img data-field='img' src="./harryp/potter_h.png">
       <div class="modalRightSide">
-        <h1 class='student-name'></h1>
+        <h1 class='student-firstName'></h1>
+        <h1 class='student-middleName'></h1>
+        <h1 class='student-lastName'></h1>
+
+
         <h3 class='student-house'></h3>
         <h3 class='student-gender'></h3>
       </div>
