added sounds for houses as well as harry p theme sound

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
       </select>
     </div>
 
+    <div class="soundImg"> <img src="./harryp/music.png"></div>
+
     <div class='sort filterCommon'>
       <h3 class="sortHeading">Sort by:</h3>
 
