added inquisitorial squad feature, fullyworking

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class='heroHeading'>Hogrwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
-      <button class='heroBtn button'>View List</button>
+     <a href="#sortSelect"><button class='heroBtn button'>View List</button></a> 
 
     </div>
 
@@ -52,7 +52,8 @@
         </option>
         <option class="selection" value="Expelled">Expelled
         </option>
-
+        <option class="selection" value="Inquisitorial">Inquisitorial Squad
+        </option>
       </select>
     </div>
 
@@ -143,6 +144,8 @@
         <h3 data-field='expelledField'>expelled</h3>
         <button data-field="button" class="cardBtn button btn">Read more</button>
         <button data-field="expell" class="cardBtn button expell">Expell</button>
+        <div class="button inquis" data-field='inquisBtn'>  <span class="inquisText">Add or remove to Inquisitorial squad</span>
+        </div>
       </div>
     </div>
 
