--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h1 class='heroHeading'>Hogrwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
-     <a href="#sortSelect"><button class='heroBtn button'>View List</button></a> 
+      <a href="#sortSelect"><button class='heroBtn button'>View List</button></a>
 
     </div>
 
@@ -126,6 +126,7 @@
         <h1 class='student-lastName'></h1>
         <h3 class='student-house'></h3>
         <h3 class='student-gender'></h3>
+        <h3 class='student-blood'></h3>
       </div>
     </div>
   </section>
@@ -135,19 +136,22 @@
   <main id='main'></main>
 
   <template id='template'>
-    <div data-field-card='card' class="cardWrapper">
-      <img data-field='img' src="./harryp/potter_h.png">
+      <div data-field-card='card' class="cardWrapper">
+        <img data-field='img' src="./harryp/potter_h.png">
 
-      <div class="Cardcontent">
-        <h2 data-field="name"></h2>
-        <h4 data-field="house"></h4>
-        <h3 data-field='expelledField'>expelled</h3>
-        <button data-field="button" class="cardBtn button btn">Read more</button>
-        <button data-field="expell" class="cardBtn button expell">Expell</button>
-        <div class="button inquis" data-field='inquisBtn'>  <span class="inquisText">Add or remove to Inquisitorial squad</span>
+        <div class="Cardcontent">
+          <h2 data-field="name"></h2>
+          <h4 data-field="house"></h4>
+          <h3 data-field='expelledField'>expelled</h3>
+          <button data-field="button" class="cardBtn button btn">Read more</button>
+          <button data-field="expell" class="cardBtn button expell">Expell</button>
+          <div class="button inquis" data-field='inquisBtn'> <span class="inquisText">Add or remove to Inquisitorial
+              squad</span>
+          </div>
+          <div class="button inquis prefect" data-field='prefectBtn'> <span class="inquisText prefText">Add or remove prefect
+            </span>
         </div>
       </div>
-    </div>
 
   </template>
   <script src="test.js"></script>
