fixed the image issues and name issues, prefects not working

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="house-crest"></div>
 
       <div class='close-btn'>X</div>
-      <img data-field='img' src="./harryp/potter_h.png">
+      <img data-field='img' src="">
       <div class="modalRightSide">
         <h1 class='student-firstName'></h1>
         <h1 class='student-middleName'></h1>
@@ -136,20 +136,21 @@
   <main id='main'></main>
 
   <template id='template'>
-      <div data-field-card='card' class="cardWrapper">
-        <img data-field='img' src="./harryp/potter_h.png">
+    <div data-field-card='card' class="cardWrapper">
+      <img data-field='img' src="./harryp/potter_h.png">
 
-        <div class="Cardcontent">
-          <h2 data-field="name"></h2>
-          <h4 data-field="house"></h4>
-          <h3 data-field='expelledField'>expelled</h3>
-          <button data-field="button" class="cardBtn button btn">Read more</button>
-          <button data-field="expell" class="cardBtn button expell">Expell</button>
-          <div class="button inquis" data-field='inquisBtn'> <span class="inquisText">Add or remove to Inquisitorial
-              squad</span>
-          </div>
-          <div class="button inquis prefect" data-field='prefectBtn'> <span class="inquisText prefText">Add or remove prefect
-            </span>
+      <div class="Cardcontent">
+        <h2 data-field="name"></h2>
+        <h4 data-field="house"></h4>
+        <h3 data-field='expelledField'>expelled</h3>
+        <button data-field="button" class="cardBtn button btn">Read more</button>
+        <button data-field="expell" class="cardBtn button expell">Expell</button>
+        <div class="button inquis" data-field='inquisBtn'> <span class="inquisText">Add or remove to Inquisitorial
+            squad</span>
+        </div>
+        <div class="button inquis prefect" data-field='prefectBtn'> <span class="inquisText prefText">Add or remove
+            prefect
+          </span>
         </div>
       </div>
 
