added search functionality

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 
     <div class="arrowDown">⌄</div>
     <img src="./harryp/crests.png" alt="hogwarts">
+    <div class="soundImg"> <img src="./harryp/music.png"></div>
+
 
   </section>
 
@@ -57,7 +59,7 @@
       </select>
     </div>
 
-    <div class="soundImg"> <img src="./harryp/music.png"></div>
+    <input class='search' type="text" placeholder="🔍 Search student">
 
     <div class='sort filterCommon'>
       <h3 class="sortHeading">Sort by:</h3>
@@ -111,7 +113,6 @@
     </div>
 
   </div> -->
-
 
   <!-- modal part -->
   <section id="modal">
