changes in the css to the card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="arrowDown">⌄</div>
-    <img src="./harryp/crests.png" alt="hogwarts">
+    <img  class='houseCrest' src="./harryp/crests.png" alt="hogwarts">
     <div class="soundImg"> <img src="./harryp/music.png"></div>
 
 
