Hacking fully works

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Hacked Hogwarts</title>
+  <title>Hacked Hogwarts || Klajdi Ajdini</title>
 </head>
 
 <body>
@@ -13,7 +13,8 @@
   <section class='hero'>
     <div class="content">
 
-      <h1 class='heroHeading'>Hogrwarts student list</h1>
+      <h1 class='heroHeading'> <span class="hacked"><span class="inquisText">Hack the system
+      </span> H</span>ogrwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
       <a href="#sortSelect"><button class='heroBtn button'>View List</button></a>
@@ -21,11 +22,17 @@
     </div>
 
     <div class="arrowDown">⌄</div>
-    <img  class='houseCrest' src="./harryp/crests.png" alt="hogwarts">
+    <img class='houseCrest' src="./harryp/crests.png" alt="hogwarts">
     <div class="soundImg"> <img src="./harryp/music.png"></div>
 
 
   </section>
+
+  <div class="systemHacked">
+    <video class='play'>
+      <source  src="./harryp/hacked.mp4">
+    </video>
+  </div>
 
   <section class="filterSection">
 
