--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="content">
 
       <h1 class='heroHeading'> <span class="hacked"><span class="inquisText">Hack the system
-      </span> H</span>ogrwarts student list</h1>
+          </span> H</span>ogrwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
-      <a href="#sortSelect"><button class='heroBtn button'>View List</button></a>
+      <a href="#"><button class='heroBtn button'>View List</button></a>
 
     </div>
 
@@ -30,7 +30,7 @@
 
   <div class="systemHacked">
     <video class='play'>
-      <source  src="./harryp/hacked.mp4">
+      <source src="./harryp/hacked.mp4">
     </video>
   </div>
 
@@ -163,6 +163,12 @@
       </div>
 
   </template>
+
+  <footer>
+    <div class="footerContent">
+      <h4>Made with love by Klajdi Ajdini</h4>
+    </div>
+  </footer>
   <script src="test.js"></script>
 </body>
 
