--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="./harryp/harry.png"/>
-
+  <link rel="icon" type="image/png" href="./harryp/harry.png" />
   <title>Hacked Hogwarts || Klajdi Ajdini</title>
 </head>
 
@@ -14,19 +13,16 @@
   <!-- hero section -->
   <section class='hero'>
     <div class="content">
-
       <h1 class='heroHeading'> <span class="hacked"><span class="inquisText">Hack the system
           </span> H</span>ogrwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
       <a href="#selectFilterBar"><button class='heroBtn button'>View List</button></a>
-
     </div>
 
     <div class="arrowDown">⌄</div>
     <img class='houseCrest' src="./harryp/crests.png" alt="hogwarts">
     <div class="soundImg"> <img src="./harryp/music.png"></div>
-
 
   </section>
 
@@ -41,15 +37,6 @@
     <div class="filter filterCommon">
       <h3 class="filterHeading">Filter by:</h3>
 
-      <!-- <button class="filter button" data-action="filter" data-filter="expelled">Expelled</button>
-      <button class="filter button" data-action="filter" data-filter="not-expelled">Not-expelled</button>
-      <button class="filter button" data-action="filter" data-filter="Gryffindor">Griffindor</button>
-      <button class="filter button" data-action="filter" data-filter="Slytherin">Slytherin</button>
-      <button class="filter button" data-action="filter" data-filter="Ravenclaw">Ravenclaw</button>
-      <button class="filter button" data-action="filter" data-filter="Hufflepuff">Hufflepuff</button>
-
-      <button class="filter button" data-action="filter" data-filter="*">All</button> -->
-      <!-- TODO: have to add expelled and not expelled -->
       <select name="theme" id="selectFilterBar">
         <option class="button" value="*"> All
         </option>
@@ -94,42 +81,6 @@
       <button class="button sortBtn" data-field='sortbtn'>Sort</button>
     </div>
   </section>
-
-
-
-  <!-- <div class="templateWrapper">
-
-    <div class="cardWrapper">
-      <img src="./harryp/potter_h.png">
-
-      <div class="Cardcontent">
-        <h2 data-name="name">Harry Potter</h2>
-        <h4 data-house='Griffindor'>Griffindor</h4>
-        <button class="cardBtn button">Read more</button>
-      </div>
-    </div>
-
-    <div class="cardWrapper">
-      <img src="./harryp/malfoy_d.png">
-
-      <div class="Cardcontent">
-        <h2 data-name="name">Draco Malfoy</h2>
-        <h4 data-house='Griffindor'>Slytherin</h4>
-        <button class="cardBtn button">Read more</button>
-      </div>
-    </div>
-
-    <div class="cardWrapper">
-      <img src="./harryp/weasley_r.png">
-
-      <div class="Cardcontent">
-        <h2 data-name="name">Ron Weasley</h2>
-        <h4 data-house='Griffindor'>Griffindor</h4>
-        <button class="cardBtn button">Read more</button>
-      </div>
-    </div>
-
-  </div> -->
 
   <!-- modal part -->
   <section id="modal">
@@ -192,10 +143,7 @@
       <h4>Made with love by Klajdi Ajdini</h4>
     </div>
   </footer>
-  <script src="test.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
-<!--  -->
-<!--  -->
-<!--  -->
