found and fixed bugs

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <button data-field="button" class="cardBtn button btn">Read more</button>
         <button data-field="expell" class="cardBtn button expell">Expell</button>
         <div class="button inquis" data-field='inquisBtn'> <span class="inquisText">Add or remove to Inquisitorial
-            squad</span>
+            squad (only Slytherin)</span>
         </div>
         <div class="button inquis prefect" data-field='prefectBtn'> <span class="inquisText prefText">Add or remove
             prefect
