--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <section class='hero'>
     <div class="content">
       <h1 class='heroHeading'> <span class="hacked"><span class="inquisText">Hack the system
-          </span> H</span>ogrwarts student list</h1>
+          </span> H</span>ogwarts student list</h1>
       <p class='heroDesc'>Welcome to the Hogwarts class of 1991 student list where you can find different information
         about the students that were attending Hogwarts in 1991.</p>
       <a href="#selectFilterBar"><button class='heroBtn button'>View List</button></a>
