improvments on use experience

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="arrowDown">⌄</div>
     <img class='houseCrest' src="./harryp/crests.png" alt="hogwarts">
-    <div class="soundImg"> <img src="./harryp/music.png"></div>
+    <!-- <div class="soundImg"> <img src="./harryp/music.png"></div> -->
 
   </section>
 
